--- a/todo/index.html
+++ b/todo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>To Do App</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
